--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"@emotion/styled": "^11.14.1",
 		"@mui/icons-material": "^7.3.6",
 		"@mui/material": "^7.3.6",
+		"html-to-image": "^1.11.13",
 		"react": "^19.2.0",
 		"react-chartjs-2": "^5.3.1",
 		"react-dom": "^19.2.0",
